--- a/src/app.css
+++ b/src/app.css
@@ -4,11 +4,11 @@
 	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
 		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-mono: 'Fira Mono', monospace;
-	--color-bg-0: rgb(202, 216, 228);
-	--color-bg-1: hsl(209, 36%, 86%);
-	--color-bg-2: hsl(224, 44%, 95%);
-	--color-theme-1: #ff3e00;
-	--color-theme-2: #4075a6;
+	--color-bg-0: rgb(7, 29, 26);
+	--color-bg-1: hsl(174, 56%, 7%);
+	--color-bg-2: hsl(153, 60%, 3%);
+	--color-theme-1: #eef1d5;
+	--color-theme-2: #ffffff;
 	--color-text: rgba(0, 0, 0, 0.7);
 	--column-width: 42rem;
 	--column-margin-top: 4rem;
@@ -17,6 +17,7 @@
 }
 
 body {
+	overflow-y: scroll;
 	min-height: 100vh;
 	margin: 0;
 	background-attachment: fixed;
@@ -24,7 +25,7 @@ body {
 	background-size: 100vw 100vh;
 	background-image: radial-gradient(
 			50% 50% at 50% 50%,
-			rgba(255, 255, 255, 0.75) 0%,
+			rgba(255, 255, 255, 0.18) 0%,
 			rgba(255, 255, 255, 0) 100%
 		),
 		linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
@@ -43,10 +44,12 @@ p {
 a {
 	color: var(--color-theme-1);
 	text-decoration: none;
+	transition: scale 0.5s ease-out;
 }
 
 a:hover {
-	text-decoration: underline;
+	color: var(--color-theme-2);
+	scale: 1.05;
 }
 
 h1 {
@@ -104,4 +107,32 @@ button:focus:not(:focus-visible) {
 	position: absolute;
 	width: 1px;
 	white-space: nowrap;
+}
+
+.animate {
+	animation-duration: 1s;
+	animation-name: animate-fade;
+	animation-delay: 0.5s;
+	animation-fill-mode: backwards;
+}
+
+@keyframes animate-fade {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+.delay-1 {
+	animation-delay: 0.6s;
+}
+.delay-2 {
+	animation-delay: 0.7s;
+	animation-duration: 1s;
+}
+.delay-3 {
+	animation-delay: 0.8s;
+	animation-duration: 1.5s;
 }
